--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,12 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     // mapper
     implementation 'org.mapstruct:mapstruct:1.5.1.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
+    // validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // gson
+    testImplementation 'com.google.code.gson:gson'
+
 }
 
 tasks.named('test') {
