--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.0'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.asciidoctor.convert' version '1.5.8'
+    id 'org.asciidoctor.jvm.convert' version "3.3.2"
 }
 
 group = 'com.example'
@@ -36,7 +36,7 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc' // rest docs
     testImplementation 'org.springframework.security:spring-security-test'
     // mapper
     implementation 'org.mapstruct:mapstruct:1.5.1.Final'
@@ -45,6 +45,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     // gson
     testImplementation 'com.google.code.gson:gson'
+    // spring restdocs asciidoctor
+    asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
 }
 
@@ -54,7 +56,7 @@ tasks.named('test') {
 }
 
 tasks.named('asciidoctor') {
-    //configurations 'asciidoctorExtensions'
+    configurations 'asciidoctorExtensions'
     inputs.dir snippetsDir
     dependsOn test
 }
