--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,12 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test
-    username: root
-    password: dkdlfltm
+    url:  jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${DATA_BASE_NAME}?useSSL=false
+    #jdbc:mysql://localhost:3306/test
+    username: ${MYSQL_USER_NAME}
+    password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create  # (1) ??? ?? ??
+      ddl-auto: update  # (1) ??? ?? ??
     show-sql: true      # (2) SQL ?? ??
     properties:
       hibernate:
