--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,19 @@ services:
       - db-mysql
     ports:
       - "8080:8080"
+    networks:
+      - springboot-mysql-net
+
   db-mysql:
     image: mysql:5.7.34
     ports:
       - "3307:3307"
+    volumes:
+      - ./db:/var/lib/mysql
     env_file:
       - env/mysql.env
-  nginx:
-    image: nginx:1.19.10
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - todo_app
+    networks:
+      - springboot-mysql-net
   redis:
     image: redis:6.2.5
     ports:
@@ -31,3 +30,6 @@ services:
     volumes:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
     command: redis-server /usr/local/etc/redis/redis.conf
+networks:
+  springboot-mysql-net:
+    driver: bridge
