--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,23 +6,23 @@ services:
       dockerfile: Dockerfile
     env_file:
       - env/app.env
-    depends_on:
-      - db-mysql
+#    depends_on:
+#      - db-mysql
     ports:
       - "8080:8080"
-    networks:
-      - springboot-mysql-net
+#    networks:
+#      - springboot-mysql-net
 
-  db-mysql:
-    image: mysql:5.7.34
-    ports:
-      - "3307:3307"
-    volumes:
-      - ./db:/var/lib/mysql
-    env_file:
-      - env/mysql.env
-    networks:
-      - springboot-mysql-net
+#  db-mysql:
+#    image: mysql:5.7.34
+#    ports:
+#      - "3307:3307"
+#    volumes:
+#      - ./db:/var/lib/mysql
+#    env_file:
+#      - env/mysql.env
+#    networks:
+#      - springboot-mysql-net
   redis:
     image: redis:6.2.5
     ports:
@@ -30,6 +30,6 @@ services:
     volumes:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
     command: redis-server /usr/local/etc/redis/redis.conf
-networks:
-  springboot-mysql-net:
-    driver: bridge
+#networks:
+#  springboot-mysql-net:
+#    driver: bridge
