--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -12,6 +12,7 @@ spring:
     properties:
       hibernate:
         format_sql: true  # (3) SQL pretty print
+        dialect: org.hibernate.dialect.H2Dialect
 
 logging:
   level:
